# SCOUT

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  next.config.js  package.json
.meta/: project-health.json
SCOUT/backend/: CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
SCOUT/backend/app/: main.py
SCOUT/backend/app/api/: metrics.py  parsing.py
SCOUT/backend/app/core/: metrics.py  pii_redaction.py
SCOUT/backend/app/models/: profile_schema.py
SCOUT/backend/app/services/: encryption_service.py  profile_validator.py
SCOUT/backend/docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  PRIVACY_SECURITY.md  QA_CHECKLIST_DAY2.md  RUNBOOK_LOCAL.md
SCOUT/backend/scripts/: init-db.sql
SCOUT/frontend/: LICENSE  next.config.js
SCOUT/frontend/src/components/: metrics-dashboard.tsx
SCOUT/frontend/src/lib/: api.ts  utils.ts
backend/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  requirements-minimal.txt  requirements.docker.txt  requirements.txt
backend/.github/: pull_request_template.md
backend/.github/ISSUE_TEMPLATE/: bug_report.md
backend/app/api/: encryption.py  uploads.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: schemas.py
backend/app/services/: docx_extractor.py  file_service.py  parser_service.py  pdf_extractor.py  skills_normalizer.py
backend/docs/: KNOWN_LIMITATIONS_DAY2.md
backend/fixtures/: manifest.json
frontend/: package-lock.json  package.json
frontend/src/components/: loading-spinner.tsx  profile-viewer.tsx  upload-form.tsx  upload-result.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: validation.ts
frontend/src/types/: upload.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: empty-state.tsx  upload-form.tsx
src/lib/: api.ts
